--- a/nodejs/views/addBook.ejs
+++ b/nodejs/views/addBook.ejs
@@ -43,11 +43,11 @@
 <body>
     <center>
         <h1>Add new book: </h1>
-        <form action="/add-book" method="post">
-            <input type="text" name="" id="title" placeholder="Enter title">
-            <input type="text" name="" id="author" placeholder="Enter author">
-            <input type="number" name="" id="price" placeholder="Enter price">
-            <input type="text" name="" id="image" placeholder="Enter image url">
+        <form action="/add-book" method="POST">
+            <input type="text" name="title" id="title" placeholder="Enter title">
+            <input type="text" name="author" id="author" placeholder="Enter author">
+            <input type="number" name="number" id="price" placeholder="Enter price">
+            <input type="text" name="image" id="image" placeholder="Enter image url">
         <button type="submit">Add New Book</button>
         </form>
     </center>
