--- a/nodejs/views/allBooks.ejs
+++ b/nodejs/views/allBooks.ejs
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        img{
+            height: 300px;
+            width: 300px;
+            border-radius: 30px;
+        }
+    </style>
 </head>
 <body>
    <h1>All books</h1>
+   <% books.forEach(function (book) { %>
+    <img src="<%= book.image %>" alt="">
+    <h1> <%= book.title %>  </h1>
+   <% }) %> 
 </body>
 </html>
